--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="page">
     <header class="header centered-block">
         <h1 class="centered-block">
-            <a href="#" class="header__link" lang="ru">Яндекс Практикум</a>
+            <a href="#" class="header__link" lang="ru">Яндекс Практикумe</a>
         </h1>
     </header>
     <nav class="menu centered-block page__menu">
